workshop slides template tweaks

--- a/decks/tools-workshop-1/index.html
+++ b/decks/tools-workshop-1/index.html
@@ -22,9 +22,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background="../../assets/images/hubzero_cropped_blue.png" data-background-repeat="no-repeat"  data-background-size="30%" data-background-position="-10% 30%">
-					<h2 class="tight">Using Simulation Workspaces</h2>
-					<h5 class="twoborders whiteonblue uppercase">Build and Share a Scientific Simulation Tool</h5>
+				<section data-background="../../assets/images/hubzero_cropped_blue.png" data-background-repeat="no-repeat"  data-background-size="30%" data-background-position="-10% 30%" class="title-slide">
+					<h2>Using Simulation Workspaces</h2>
+					<h5>Build and Share a Scientific Simulation Tool</h5>
 					<p>
 						<small>Facilitated by <a href="https://github.com/codedsk">Derrick Kearney</a> <br /> <a href="https://hubzero.org">HUBzero®</a>, Purdue University</small>
 					</p>
